--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": {
     "CafeneaSiteContext": "Server=(localdb)\\mssqllocaldb;Database=CafeneaSite.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
     "LibraryIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CafeneaSite;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+
+  "SendGridApiKey": "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"
 }
